<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="56dp">

         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:drawableEnd="@drawable/ic_search_black_24dp"
             android:layout_marginEnd="@dimen/searchMargin"
             android:hint="@string/search"/>

     </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="@dimen/cardMargin"
        android:layout_width="match_parent"
        android:background="@drawable/card_background"
        android:alpha="0.9"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:layout_marginEnd="@dimen/cardMargin"
        android:layout_marginStart="@dimen/cardMargin">

        <TextView
            android:textColor="@color/mainWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/weather"
            android:text="@string/_35_xb0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainWhite"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:text="@string/description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainWhite"
            android:paddingTop="8dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:text="@string/humidity"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainWhite"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:textSize="32sp"
            android:text="@string/_30_xb0"/>

        <ImageView
            android:layout_width="150dp"
            android:scaleType="fitXY"
            android:layout_height="120dp"
            android:layout_gravity="end"
            android:id="@+id/weatherImage"
            android:src="@drawable/fog_weather"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardMargin"
        android:layout_marginStart="@dimen/cardMargin"
        android:text="@string/next_7_days"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cardMargin"/>

</LinearLayout>