<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.WeatherDetailFragment">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="56dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_search_black_24dp"
            android:layout_marginEnd="@dimen/searchMargin"
            android:hint="@string/search"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/searchMargin"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/mainCard"
        app:cardCornerRadius="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tint="@color/colorAccent"
            android:layout_gravity="end"
            android:contentDescription="@string/cancel"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/cancel"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/searchMargin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_location_on_black_24dp"
                android:gravity="center"
                android:paddingStart="@dimen/searchMargin"
                android:paddingEnd="@dimen/searchMargin"
                android:text="@string/ibadan"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/temperature"
                android:gravity="center"
                android:text="@string/_35_xb0"
                android:textColor="@color/mainWhite"
                android:textSize="@dimen/weather"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/description"
                android:textColor="@color/mainWhite"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:text="@string/humidity"
                android:textColor="@color/mainWhite"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/humidity1"
                android:padding="8dp"
                android:src="@drawable/humidity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:text="@string/thirty"
                android:textColor="@color/mainWhite"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/wind_direction"
                        android:textColor="@color/mainWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/wind_direc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.5"
                        android:text="@string/thirty"
                        android:textColor="@color/mainWhite"
                        android:textSize="32sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/cloud_cover"
                        android:textColor="@color/mainWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/cloud_cover" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.5"
                        android:text="@string/thirty"
                        android:textColor="@color/mainWhite"
                        android:textSize="32sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/visibility"
                        android:textColor="@color/mainWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/visibility" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.5"
                        android:text="@string/thirty"
                        android:textColor="@color/mainWhite"
                        android:textSize="32sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/wind_speed"
                        android:textColor="@color/mainWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/rose" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.5"
                        android:text="@string/thirty"
                        android:textColor="@color/mainWhite"
                        android:textSize="32sp" />

                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:contentDescription="@string/detailweather"
                android:scaleType="fitXY"
                android:src="@drawable/fog_weather" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:contentDescription="@string/detailweather"
                android:scaleType="fitXY"
                android:src="@drawable/fog_weather" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>
    </ScrollView>



</LinearLayout>