<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weather"
            type="com.example.weatherapp.model.ForecastWeather" />

    </data>

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="150dp"
        app:cardCornerRadius="24dp"
        android:elevation="32dp"
        app:cardBackgroundColor="@color/mainCard"
        android:layout_height="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textColor="@color/mainWhite"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_marginTop="12dp"
                android:layout_height="50dp"
                android:contentDescription="@string/icon"
                android:src="@{weather.icon}"
                android:layout_gravity="center"
                tools:src="@drawable/windy_weather"/>

            <TextView
                android:layout_width="wrap_content"
                android:paddingTop="8dp"
                android:layout_height="wrap_content"
                android:text="@{weather.temperature}"
                android:textColor="@color/mainWhite"
                android:layout_gravity="center"
                android:textSize="36sp"
                tools:text="@string/_40_xb0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{weather.humidity}"
                    android:textColor="@color/mainWhite"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:alpha="0.5"
                    android:gravity="center"
                    tools:text="@string/_40_xb0"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{weather.precipitation}"
                    android:textColor="@color/mainWhite"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="@string/_40_xb0"/>


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>
</layout>